--- a/cookies.html
+++ b/cookies.html
@@ -344,9 +344,9 @@
     <div class="logo" aria-label="GrowPrime Gardening Logo">GrowPrime</div>
     <div class="nav-links">
       <a href="index.html" tabindex="0">Home</a>
-      <a href="privacy.html" tabindex="0">Privacy Policy</a>
+      <a href="privacy.html" tabindex="0">Privacy </a>
       <a href="terms.html" tabindex="0">Terms & Conditions</a>
-      <a href="cookies.html" tabindex="0" aria-current="page">Cookies Policy</a>
+      <a href="cookies.html" tabindex="0" aria-current="page">Cookies</a>
       <a href="contact.html" tabindex="0">Contact</a>
     </div>
   </nav>
